- New IsotopeGallery class for creating custom image galleries
- Added: Product weight field and weight units
- Added: Shipping module for price based on product weight
- Added: New payment module for ePay (www.epay.eu)
- Added: Hooks for altering product before output
- Added: Payment and and shipping module can now provide additional info for each order (trough a button/operation)
- Added limit panel to tl_iso_product_categories (Ticket #132)
- Fixed: Images are now updated when selecting a product variant
- Fixed: Null array bug in ModuleIsotopeProductFilter
- Fixed: Null object bug in IsotopeCart
- Fixed: Disabled deprecated product storage in checkout module - now copies only product options to order items table.
- Fixed: Changed all price fields to use decimal(12,2) (payment gateways require 2 digit precision)
- Fixed: Table naming is not consistent, renamed tl_cart,tl_cart_items to tl_iso_cart,tl_iso_cart_items (Ticket #117)
- Removed: Paypal Website Payments Pro option - use Paypal Payflow Pro or Paypal Standard
- Removed generatePrice() function, stpl_price and stpl_total_price templates. Now using formatPriceWithCurrency

Version 0.1.2 (2010-??-??)
------------------------------
- Fixed: Backend variant listing showed unassigned attributes (Ticket #135)
- Fixed problem with payment modules accepting only two digit floating point precision (Ticket #136)
- Fixed wrong grand total price in cart module (Ticket #137)
- Fixed variant price in cart not correct
- Fixed a possible bug with attributes not available in the template
- Moved product tax class field to pricing legend (Ticket #134)
- Now using domready event to submit payment checkout forms (Ticket #145)

Version 0.1.1 (2010-06-06)
------------------------------
- Customer email is now sent to member email if no email in address book
- Fixed: Countries and shipping methods for payment modules are no longer mandatory
- Fixed: Subdivisions for shipping modules should now work correctly