@@ -46,6 +46,7 @@ CREATE TABLE `tl_module` (
   `iso_cart_jumpTo` int(10) unsigned NOT NULL default '0',
   `iso_checkout_jumpTo` int(10) unsigned NOT NULL default '0',
   `orderCompleteJumpTo` int(10) unsigned NOT NULL default '0',
+  `iso_addProductJumpTo` int(10) unsigned NOT NULL default '0',
   `iso_listingSortField` varchar(255) NOT NULL default '',
   `iso_listingSortDirection` varchar(8) NOT NULL default '',
   `iso_buttons` blob NULL,
@@ -203,7 +204,6 @@ CREATE TABLE `tl_iso_config` (
   `label` varchar(255) NOT NULL default '',
   `missing_image_placeholder` varchar(255) NOT NULL default '',
   `cookie_duration` int(10) unsigned NOT NULL default '0',
-  `iso_product_add_jumpTo` int(10) unsigned NOT NULL default '0',
   `priceCalculateFactor` varchar(10) NOT NULL default '',
   `priceCalculateMode` varchar(3) NOT NULL default '',
   `priceRoundPrecision` int(1) unsigned NOT NULL default '2',
